# underwriting_insurance

./: pyproject.toml
notebooks/: chatbot.ipynb
src/infrastructure/: chatbot_rules.py  rules.py
test/: test_app.py
