[project]
name = "underwriting-insurance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-core>=1.2.6",
    "langchain-openai>=1.1.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyzmq>=27.1.0",
    "jupyter>=1.0.0",
]
[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["underwriting_insurance"]
